<resources>
    <string name="app_name">SimpleNumericKeyboard</string>
    <string name="tvResultGrid_Erros">Total de Erros</string>
    <string name="edtResultGrid_TotalAcertos">Total de Acertos</string>
    <string name="tvResultGrid_TotalTentativas">Total de Tentativas</string>
    <string name="advertisement">Patrocínio</string>
    <string name="banner_ad_unit_id">ca-app-pub-1098336821710456/5195031604</string>
    <string name="banner_ad_unit_TESTE">ca-app-pub-3940256099942544/6300978111</string>
    <string name="contagem_regressiva_n_nvoc_tem_60_seg_para_resolver_o_maior_n_mero_de_quest_es">CONTAGEM REGRESSIVA\n\nVocê tem 60 seg. para resolver o maior número de questões</string>
    <string name="btn_Iniciar_Teste_Matematica">INICIAR NOVO \nTESTE DE MATEMÁTICA</string>
    <string name="limpar">Limpar</string>
    <string name="Countdown">Tempo Restante:</string>
    <string name="resultadoGeral">RESULTADO GERAL</string>
    <string name="TotalAcertos">Total Acertos</string>
    <string name="acertos">% Acertos</string>
    <string name="_40">40</string>
    <string name="nok">NOK</string>
    <string name="voltar">Voltar</string>
    <string name="final_message80Perc">Parabéns. Você esta no caminho certo.</string>
    <string name="final_message50Perc">Você esta no caminho certo, mas pode melhorar.</string>
    <string name="final_messageLess50Perc">Vamos estudar um pouco mais.</string>
    <string name="_0">0</string>
    <string name="x">X</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="enviar">Enviar</string>

</resources>
