<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ddmsoftware.simplenumerickeyboard.TableGameActivity"
    android:background="@drawable/backgroundv4">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearFTMainCountainer">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/linearFTResult">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gridFTResult"
                android:rowCount="2"
                android:layout_gravity="center_horizontal"
                android:columnCount="2">

                <TextView
                    android:text="@string/edtResultGrid_TotalAcertos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textFTView3"
                    android:layout_gravity="start"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvFTGridResult_TotalErros"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvFTGridResult_TotalAcertos"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="start"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold"
                    />

                <TextView
                    android:text="@string/tvResultGrid_Erros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textFTView4"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:textStyle="bold" />
            </GridLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/linearFTNumbers">

            <TextView
                android:text="@string/_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvFTFirstNumber"
                android:textStyle="normal|bold"
                android:textSize="30sp"
                android:layout_gravity="end" />

            <TextView
                android:text="@string/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvFTSignal"
                android:textStyle="normal|bold"
                android:textSize="30sp"
                android:textAlignment="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <TextView
                android:text="@string/_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvFTSecondNumber"
                android:textStyle="normal|bold"
                android:textSize="30sp"
                android:layout_gravity="end" />
        </LinearLayout>

        <TextView
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="24sp"
            android:id="@+id/tvFTResultDigitado"
            android:background="@android:color/holo_orange_light"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="260dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvFTResultCalculado"
            android:visibility="gone"
            android:text="@string/_0" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/linearFTNumericKeyboard">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gridKeyboard"
                android:columnCount="3"
                android:rowCount="4"
                android:layout_gravity="center_horizontal"
                >

                <Button
                    android:text="@string/_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFTOne"
                    android:layout_row="0"
                    android:layout_column="0"/>

                <Button
                    android:text="@string/_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFTTwo"
                    android:layout_row="0"
                    android:layout_column="1"/>

                <Button
                    android:text="@string/_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFTThree"
                    android:layout_row="0"
                    android:layout_column="2"/>

                <Button
                    android:text="@string/_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFTFour"
                    android:layout_row="1"
                    android:layout_column="0"/>

                <Button
                    android:text="@string/_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFTFive"
                    android:layout_row="1"
                    android:layout_column="1"/>

                <Button
                    android:text="@string/_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFTSix"
                    android:layout_row="1"
                    android:layout_column="2"/>

                <Button
                    android:text="@string/_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFTSeven"
                    android:layout_row="2"
                    android:layout_column="0" />

                <Button
                    android:text="@string/_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFTEight"
                    android:layout_row="2"
                    android:layout_column="1"/>

                <Button
                    android:text="@string/_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFTNine"
                    android:layout_row="2"
                    android:layout_column="2"/>

                <Button
                    android:text="@string/enviar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFTSend"
                    android:layout_row="3"
                    android:layout_column="2"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold" />

                <Button
                    android:text="@string/_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFTZero"
                    android:layout_row="3"
                    android:layout_column="1" />

                <Button
                    android:text="@string/limpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnFTErase"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </GridLayout>
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_TESTE"
            android:id="@+id/adViewFTTableGame"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnFTStartNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Iniciar_Teste_Matematica"
        android:drawableStart="@drawable/freetime2"
        android:drawableLeft="@drawable/freetime2"
        android:textAllCaps="false"
        android:background="@color/cast_intro_overlay_button_background_color"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_below="@+id/btnFTStartNewGame"
        android:id="@+id/btnFTVoltar1" />
</RelativeLayout>
